--- a/client/src/main/resources/application.yaml
+++ b/client/src/main/resources/application.yaml
@@ -1,3 +1,10 @@
 server:
   port: 8082
 
+spring:
+  config:
+    import: "optional:configserver:http://localhost:8081/"
+  cloud:
+    config:
+      name: client
+      profile: local
